--- a/game/index.html
+++ b/game/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Dev game</title>
+    <title>Whack a mole</title>
 </head>
 <body>
     <h1 class="score">SCORE: <span>00</span></h1>
