--- a/website museum/index.html
+++ b/website museum/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <link rel="stylesheet" href="css/game.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <title>Museum</title>
 </head>
 
@@ -19,7 +20,7 @@
                 <li><a href="#about">Info</a></li>
                 <li><a href="#game">Game</a></li>
                 <li><a href="#reviews">Reviews</a></li>
-                <li>NL/ENG</li>
+                <li><a href="engels.html">NL/ENG</a></li>
             </ul>
         </div>
     </nav>
@@ -38,37 +39,42 @@
             <div class="about">
                 <i class="fas fa-tachometer-alt fa-3x"></i>
                 <span class="about-title">Onze geschiedenis</span>
-                <p>Een garagebox in Den Haag is de plek waar het avontuur in 2008  begon, met twee vrienden Hasan Tasdemir en Pascal Rappailles. De garagebox werd al snel te klein waarna ze uitweken naar een loods op een industrieterrein. Helaas was de loods niet verwarmd en moest midden in de winter alles worden overgebracht naar een leegstaand Ministerie van Landbouw. Toen ook dit pand leeggeruimd moest worden, werd de toenmalige collectie van 10 arcade videogames met wat reserveonderdelen opgeslagen in een oude showroom voor klassieke auto’s. Omdat daar geen ruimte was om de kasten te renoveren of te bespelen werd uitgekeken naar passende ruimte. Die werd in 2011 gevonden aan de Cobaltstraat in Zoetermeer. Daar besloot Hasan om met 4 vrienden de locatie te huren en kon het avontuur groeien tot een eigen ontmoetingsplek om hun hobby uit te oefenen en lekker te ontspannen met een game.</p>
+                <p>Een garagebox in Den Haag is de plek waar het avontuur in 2008 begon, met twee vrienden Hasan
+                    Tasdemir en Pascal Rappailles. De garagebox werd al snel te klein waarna ze uitweken naar een loods
+                    op een industrieterrein. Helaas was de loods niet verwarmd en moest midden in de winter alles worden
+                    overgebracht naar een leegstaand Ministerie van Landbouw. Toen ook dit pand leeggeruimd moest
+                    worden, werd de toenmalige collectie van 10 arcade videogames met wat reserveonderdelen opgeslagen
+                    in een oude showroom voor klassieke auto’s. Omdat daar geen ruimte was om de kasten te renoveren of
+                    te bespelen werd uitgekeken naar passende ruimte. Die werd in 2011 gevonden aan de Cobaltstraat in
+                    Zoetermeer.</p>
             </div>
             <div class="about">
                 <i class="fas fa-code fa-3x"></i>
                 <span class="about-title">Wat is er te zien?</span>
-                <p>Zodra je binnenkomt in het museum, word je overgoten door alles wat de game cultuur zo mooi en indrukwekkend maakt. Volg onze tijdlijn door de sfeerkamers en ontdek de geschiedenis van videogames aan de hand van de gamechangers, hoogtepunten en belangrijke momenten in techniek, artwork en cultuur binnen de game industrie. Speel klassiekers, ontmoet iconen en ontdek de vergeten schatten van de videogames. Het museum heeft rond 231 spelcomputers, homecomputers en arcadekasten speelklaar staan, en 327 unieke speelplekken. Dat maakt ons het museum met de grootste arcade van heel Europa!</p>
+                <p>Zodra je binnenkomt in het museum, word je overgoten door alles wat de game cultuur zo mooi en
+                    indrukwekkend maakt. Volg onze tijdlijn door de sfeerkamers en ontdek de geschiedenis van videogames
+                    aan de hand van de gamechangers, hoogtepunten en belangrijke momenten in techniek, artwork en
+                    cultuur binnen de game industrie. Speel klassiekers, ontmoet iconen en ontdek de vergeten schatten
+                    van de videogames. Het museum heeft rond 231 spelcomputers, homecomputers en arcadekasten speelklaar
+                    staan, en 327 unieke speelplekken. Dat maakt ons het museum met de grootste arcade van heel Europa!
+                </p>
             </div>
             <div class="about">
                 <i class="fas fa-layer-group fa-3x"></i>
                 <span class="about-title">Activiteiten</span>
-                <p>Onze Lab is een dynamische ruimte. Van het bewonderen van game art tot het reizen door nieuwe werelden. In het Lab is altijd wel wat nieuws te beleven: de ene keer leer je er van alles over de geschiedenis van gamen tijdens een lezing en de andere keer verwelkomen wij je er tijdens een toernooi of een meet-up.  Ervaar de toekomst van gaming, of geef deze zelf vorm in het Lab! in onze Barcade, waar moderne horeca en retro arcadekasten samenkomen in een gezellige omgeving. Hier kun je even bijtanken na uren avonturieren, uitdagingen en de wereld redden. Naast de bekende halal hotdogs en tosti’s bieden we nu ook gezonde broodjes.</p>
+                <p>Onze Lab is een dynamische ruimte. Van het bewonderen van game art tot het reizen door nieuwe
+                    werelden. In het Lab is altijd wel wat nieuws te beleven: de ene keer leer je er van alles over de
+                    geschiedenis van gamen tijdens een lezing en de andere keer verwelkomen wij je er tijdens een
+                    toernooi of een meet-up. Ervaar de toekomst van gaming, of geef deze zelf vorm in het Lab! in onze
+                    Barcade, waar moderne horeca en retro arcadekasten samenkomen in een gezellige omgeving. Hier kun je
+                    even bijtanken na uren avonturieren, uitdagingen en de wereld redden. Naast de bekende halal hotdogs
+                    en tosti’s bieden we nu ook gezonde broodjes.</p>
             </div>
         </div>
     </section>
 
     <section id="game">
         <h1 class="score">SCORE: <span>00</span></h1>
-        <div class="board">
-            <div class="hole"></div>
-            <div class="hole"></div>
-            <div class="hole"></div>
-            <div class="hole"></div>
-            <div class="hole"></div>
-            <div class="hole"></div>
-            <div class="hole"></div>
-            <div class="hole"></div>
-            <div class="hole"></div>
-        </div>
-        <div class="cursor"></div>
-    
-        <script src="js/app.js"></script>
     </section>
 
     <div id="reviews">
@@ -76,34 +82,61 @@
         <div id="reviews-container">
             <div class="reviews">
                 <img src="/img/person-1.jpeg" alt="" class="reviews-image">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, autem dolores dolorum cumque
-                    voluptas eius. Eum quisquam illum error sapiente?</p>
+                <p>Ik vond de site erg leuk en heel interresant, het heeft precies de informatie die ik nodig had om de
+                    museum te bezoeken.</p>
             </div>
             <div class="reviews">
                 <img src="/img/person-2.jpeg" alt="" class="reviews-image">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, autem dolores dolorum cumque
-                    voluptas
-                    eius. Eum quisquam illum error sapiente?</p>
+                <p>Ik vond de site erg gebruiksvriendelijk en je kan de nodige informatie heel makkelijk vinden. Ik vond
+                    de kleuren en de style van de site ook heel mooi.</p>
             </div>
             <div class="reviews">
                 <img src="/img/person-3.jpeg" alt="" class="reviews-image">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, autem dolores dolorum cumque
-                    voluptas
-                    eius. Eum quisquam illum error sapiente?</p>
+                <p>Ik vond de site zeer informatief en ik vond de site erg leuk omdat deze ook toegankelijk is voor mensen
+                    met een visuele beperking.</p>
             </div>
             <div class="reviews">
                 <img src="/img/person-4.jpeg" alt="" class="reviews-image">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, autem dolores dolorum cumque
-                    voluptas
-                    eius. Eum quisquam illum error sapiente?</p>
+                <p>Ik vond de site erg leuk ondanks dat hij heel eenvoudig was, maar hij gaf me alle informatie die ik nodig
+                    had om het museum te bezoeken</p>
             </div>
         </div>
     </div>
-    </div>
 
-    <footer id="footer">
-        <p>Informatie</p>
-        <p></p>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Contact</h4>
+                    <ul>
+                        <li>info@nationaalvideogamemuseum.nl</li>
+                        <li>pers@nationaalvideogamemuseum.nl</li>
+                        <li>zakelijk@nationaalvideogamemuseum.nl</li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Openingstijden</h4>
+                    <ul>
+                        <li>Maandag: Gesloten</li>
+                        <li>Dinsdag: Gesloten</li>
+                        <li>Woensdag: 10.00 - 18.00 uur</li>
+                        <li>Donderdag: 10.00 - 18.00 uur</li>
+                        <li>Vrijdag: 10.00 - 21.00 uur</li>
+                        <li>Zaterdag: 10.00 - 18.00 uur</li>
+                        <li>Zondag: 12.00 - 18.00 uur</li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Social Media</h4>
+                    <div class="social-links">
+                        <a href="https://www.facebook.com/NationaalGameMuseum/"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/NaVGMuseum"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.youtube.com/channel/UCnNuMO-7-TVI5ZEZwzU14Ew/featured?view_as=subscriber"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/NVGMuseum/"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <!-- jQuery CDN -->
