engelse versie game gefixed

--- a/websiteMuseum/engels.html
+++ b/websiteMuseum/engels.html
@@ -73,9 +73,13 @@
         </div>
     </section>
 
-    <section id="game">
-        <h1 class="score">SCORE: <span>00</span></h1>
-    </section>
+    <div id="game"> 
+        <canvas id="myCanvas" width="900" height="900"></canvas>
+        <script src = "https://code.createjs.com/easeljs-0.8.2.min.js"></script>
+        <script src="functions.js"></script>
+        <script src="whack.js"></script> 
+   
+   </div>
 
     <div id="reviews">
         <div class="headline">Reviews</div>
